# SpacialArm

./: Arm.py  ArmGrapher.py  ArmSolver.py  FINAL_SOLUTION.md  GeneticSolver.py  INDEPENDENT_VISUALIZER.md  ImprovedGeneticSolver.py  NEW_INTERFACE_5_3.md  README.md  RESTRUCTURING_SUMMARY.md  Readme.md  SETUP.md  SOLUTION_SUMMARY.md  TROUBLESHOOTING.md  Vector.py  install.sh  main.py  pyproject.toml  requirements.txt  run.sh  run_from_terminal.sh  run_independent_visualizer.sh  run_visualization.py  run_visualizer.py  test_interface.py  verify_solution.py
Experiments/: 2dcollections3d_demo.py  Cylinder.py  MatplotExp.py  RECM.py  scatter3d_demo.py  trisurf3d_demo2.py
controllers/: main_controller.py
models/: arm_model.py  genetic_solver.py
views/: gl_widget.py  main_window.py
window/: armVisualizer.py  glWidget.py  main.ui  mainInterface.py
